--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+@import "/nord/nord.css";
+
 body {
-    background-color:#262B4B;
+    background-color:var(--nord0);
     margin: 0;
     padding: 0;
     height: 100%;
@@ -40,7 +42,7 @@ iframe {
     margin-left: 25%;
     margin-top: 2.5vh;
     border-radius: 20px;
-    border-color: #ffffff;
+    border-color: var(--nord4);
     height:10px;
 }
 
